welcome.lessons.welcome.bat.bool1.Max1020.scala.error
max1020:4: error: not found: value &&
case a>9&&a<20&&b<a => return a
              ^max1020:5: error: not found: value &&
case b>9&&b<20&&a<b => return b
              ^